# docs/swagger/swagger.json
@@ -16,6 +16,25 @@
         "version": "2.0"
     },
     "paths": {
+        "/api/academic-calendar": {
+            "get": {
+                "description": "Get IIUM academic calendar",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "academic"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ResponseDTO"
+                        }
+                    }
+                }
+            }
+        },
         "/api/ads": {
             "get": {
                 "description": "Get i-Ma'luum ads",
@@ -142,6 +161,47 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dtos.ResponseDTO"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/disciplinary": {
+            "get": {
+                "description": "Get compound and traffic summon records from i-Ma'luum",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "scraper"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "API key for additional security layer",
+                        "name": "x-gomaluum-key",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ResponseDTO"
+                        }
+                    },
+                    "404": {
+                        "description": "No disciplinary or compound records found",
+                        "schema": {
+                            "$ref": "#/definitions/errors.CustomError"
                         }
                     }
                 }
